<resources>
    <string name="app_name">Sariwala</string>
    <string name="title_activity_saree_fragment">SareeFragment</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_search">Search</string>
    <string name="title_offers">Offers</string>
    <string name="title_basket">Basket</string>
    <string name="paithani" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="best_online_sari_market">Best Online Sari Market</string>
    <string name="sariwala">Sariwala</string>
    <string name="welcome_to">Welcome to</string>
    <string name="slide_viewer">slide viewer</string>
    <string name="back_button">back button</string>
    <string name="this_is_the_title">This is the title</string>
    <string name="mrp">MRP :</string>
    <string name="_0_items">0 Items</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="cart">Cart</string>
    <string name="remove">Remove</string>
    <string name="saree_cart_image">saree_cart_image</string>
    <string name="_1">1</string>
    <string name="remove_from_cart">remove_from_cart</string>
    <string name="total_rs">Total Rs :</string>
    <string name="checkout">Checkout</string>

</resources>
