<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:textSize="20sp"
        android:textStyle="bold">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="218dp"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:gravity="end"
                android:text="@string/welcome_to"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/grey"
                android:text="@string/sariwala"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/grey"
            android:gravity="center"
            android:text="@string/best_online_sari_market"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/slide_viewer"/>

    <TextView
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:padding="5dp"
        android:textAlignment="center"
        android:background="@color/red"
        android:text="@string/shop_by_category"
        android:textColor="@color/white"
        android:gravity="center_horizontal" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="3">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/home_category"
            android:layout_marginBottom="50dp" />
    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>