<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardElevation="10dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="4dp">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/sareecartimage"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/saree_cart_image"
                app:srcCompat="@android:drawable/ic_menu_report_image" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/sareecarttitle"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text=""
                android:textSize="15sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mrp"
                    android:textSize="12sp">

                </TextView>

                <TextView
                    android:paddingTop="10dp"
                    android:id="@+id/sareecartprice"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text=""
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <TextView
                android:id="@+id/sareediscountcartprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text=""
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/red">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_remove_circle"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/remove_from_cart"/>

                <Button
                    android:id="@+id/remove"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:background="@color/red"
                    android:text="@string/remove"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addp"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_add_product"
                     />

                <TextView
                    android:id="@+id/quantityp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_1"
                    android:textColor="@color/red"
                    android:textAlignment="center"
                    android:textSize="19sp"/>

                <Button
                    android:id="@+id/removep"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_remove_product"
                    />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>