<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardElevation="10dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="4dp">



        <ImageView
            android:id="@+id/sareeimage"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            app:srcCompat="@android:drawable/ic_menu_report_image" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/sareetitle"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text=""
                android:textSize="15sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mrp"
                    android:textSize="12sp">

                </TextView>

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/sareeprice"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text=""
                android:textSize="10sp"
                tools:ignore="SmallSp" />
            </LinearLayout>

            <TextView
                android:id="@+id/sareediscountprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text=""
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="100dp">

            <Button
                android:id="@+id/wishlist"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/def"
                android:maxLines="2"
                android:text="@string/add_to_wishlist"
                android:textColor="#fff"
                android:textSize="10sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/cart"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ghi"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:paddingTop="10dp"
                    android:text="@string/add_to_cart"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"
                    android:visibility="visible"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <Button
                        android:id="@+id/addp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_add_product"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:layout_weight="1"
                        android:textColor="@color/red"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:id="@+id/quantityp"/>

                    <Button
                        android:id="@+id/removep"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_remove_product" />
                </LinearLayout>
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>